--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ packages = [{include = "linda_store"}]
 [tool.poetry.dependencies]
 python = "^3.12"
 django = "^5.0.3"
+pillow = "^10.2.0"
 
 
 [build-system]
