build(issue#15): Adicionado libs taskipy, blue, isort, ruff, pytest, pytest-cov.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,39 @@ django = "^5.0.3"
 pillow = "^10.2.0"
 
 
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.1.1"
+pytest-cov = "^4.1.0"
+taskipy = "^1.12.2"
+blue = "^0.9.1"
+isort = "^5.13.2"
+ruff = "^0.3.3"
+
+[tool.ruff]
+line-length = 79
+exclude = ['.venv', 'migrations']
+
+[tool.isort]
+profile = "black"
+line_length = 79
+extend_skip = ['migrations']
+
+[tool.pytest.ini_options]
+pythonpath = "."
+filterwarnings = ["ignore::UserWarning", "error", 'ignore::DeprecationWarning',]
+
+[tool.blue]
+extend-exclude = '(migrations/)'
+
+[tool.taskipy.tasks]
+lint = 'ruff check . && blue --check . --diff'
+format = 'blue .  && isort .'
+# run = 'uvicorn fast_zero.app:app --reload'
+pre_test = 'task lint'
+test = 'pytest -s -x --cov=lindaStore -vv'
+post_test = 'coverage html'
+
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
