--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,9 +8,10 @@ readme = "README.md"
 packages = [{include = "linda_store"}]
 
 [tool.poetry.dependencies]
-python = "^3.12"
+python = "^3.11"
 django = "^5.0.3"
 pillow = "^10.2.0"
+watchfiles = "^0.21.0"
 celery = "^5.3.6"
 flower = "^2.0.1"
 
