--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,9 @@ pillow = "^10.2.0"
 watchfiles = "^0.21.0"
 celery = "^5.3.6"
 flower = "^2.0.1"
+stripe = "^8.7.0"
+python-decouple = "^3.8"
+weasyprint = "^61.2"
 
 
 [tool.poetry.group.dev.dependencies]
