--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ taskipy = "^1.12.2"
 blue = "^0.9.1"
 isort = "^5.13.2"
 ruff = "^0.3.3"
+django-debug-toolbar = "^4.3.0"
 
 [tool.ruff]
 line-length = 79
